Refactor entity permission checks and improve type casting
- Updated entity permission checks in EntityEventHandler to use explicit casting instead of pattern matching for better clarity and compatibility.
- Refactored various instances of pattern matching to explicit casting in EntityEventHandler, PlayerEventHandler, and other classes for consistency.
- Enhanced logging behavior in GriefPrevention to conditionally exclude debug logs based on configuration.
- Adjusted plugin.yml to reflect the correct API version.
- Improved test cases for command alias configurations to use a more readable format.